--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <div id="app"></div>
+
     <script type="module" src="/dist/index.js"></script>
   </body>
 </html>
